@@ -62,6 +62,6 @@ public class BoardService {
     public List<BoardResponseDto> findMyBoards(User user) {
         return boardRepository.findAllByUser(user).stream()
                 .map(BoardMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
